deploy/k8s/overlays/openshift/remove-ingress.yaml
$patch: delete
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: onlybudget-web
